Garage doors open with sound

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 /Assets/PolygonGangWarfare/
 /Assets/PolygonHeist/
 /Assets/PolygonStreetRacer/
+/Assets/PolygonGangWarfare.meta
+/Assets/PolygonHeist.meta
+/Assets/PolygonStreetRacer.meta
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
